# internal/storage/models/task.go
@@ -7,9 +7,9 @@ import (
 )
 
 type Task struct {
-	Id        uuid.UUID `json:"id" db:"id"`
-	UserId    uuid.UUID `json:"user_id" db:"user_id"`
-	StartTime time.Time `json:"start_time" db:"start_time"`
-	EndTime   time.Time `json:"end_time" db:"end_time"`
-	Total     string    `json:"total" db:"total"`
+	Id        uuid.UUID
+	UserId    uuid.UUID
+	StartTime time.Time
+	EndTime   time.Time
+	Total     string
 }
